# LeanCast

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
native/: LeanCast.rc.in  app.manifest
native/src/: calculator.hpp  converter.hpp  core.hpp  emoji.hpp  extension_manager.hpp  main.cpp  shortcut.hpp  symbols.hpp
native/tests/: core_tests.cpp
scripts/: gen-emoji.ps1  gen-icons.ps1
